# FocusWeave

./: .gitignore  LICENSE  README.md  api_example.py  focus_stack.py  focusweave.spec  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
focusweave/: __init__.py  api_example.py  focus_stack.py  main.py  streaming_stack.py
